@@ -1,3 +1,5 @@
+* Use the most used currency by party on the 10 last records as default value
+  for purchase and product_supplier
 * Add currency on product_supplier
 * Add a Function field delivery_date to purchase line
 * Purchase date is required only at confirmation
